removed line break in project titles.

--- a/Research.html
+++ b/Research.html
@@ -92,7 +92,7 @@ We propose a new multi-frame method for efficiently computing scene flow (dense 
 <td style="width: 80%">			
 <span class="textStyle">
 <strong>
-Flight Dynamics-based Recovery of a UAV Trajectory using<br>Ground Cameras</strong><br>
+Flight Dynamics-based Recovery of a UAV Trajectory using Ground Cameras</strong><br>
 <a href="http://cvpr2017.thecvf.com/">CVPR 2017</a><br>
 <font size = 2>
 
@@ -128,7 +128,7 @@ Data-driven techniques help boost agricultural productivity by increasing yields
 <td style="width: 80%">			
 <span class="textStyle">
 <strong>
-Robust Multiview Photometric Stereo using Planar Mesh<br>Parameterization</strong><br>
+Robust Multiview Photometric Stereo using Planar Mesh Parameterization</strong><br>
 <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34">TPAMI 2017</a><br>
 <font size = 2>
 We propose a robust uncalibrated multiview photometric stereo method for high quality 3D shape reconstruction. In our method, a coarse initial 3D mesh obtained using a multiview stereo method is projected onto a 2D planar domain using a planar mesh parameterization technique. We describe methods for surface normal estimation that work in the parameterized 2D space that jointly incorporates all geometric and photometric cues from multiple<a href = "http://jaesik.info/publications/multiviewps/index.html">...</a>
@@ -182,7 +182,7 @@ We present an efficient technique to optimize color consistency of a collection 
 <td style="width: 80%">			
 <span class="textStyle">
 <strong>
-Joint Recovery of Dense Correspondence and Cosegmentation in Two<br>Images</strong><br>
+Joint Recovery of Dense Correspondence and Cosegmentation in Two Images</strong><br>
 <a href="http://cvpr2016.thecvf.com/">CVPR 2016</a><br>
 <font size = 2>
 We propose a new technique to jointly recover cosegmentation and dense per-pixel correspondence in two images. Our method parameterizes the correspondence ﬁeld using piecewise similarity transformations and recovers a mapping between the estimated common “foreground” regions in the two images allowing them to be precisely aligned. Our formulation is based on a hierarchical Markov random ﬁeld model with segmentation and transformation labels. The hierarchical structure uses nested image regions to constrain inference<a href = "http://taniai.space/projects/cvpr16_dccs/">...</a>
@@ -332,7 +332,7 @@ We present a system that detects 3D mirror-symmetric objects in images and then 
 <td style="width: 80%">			
 <span class="textStyle">
 <strong>
-Multiple View Object Cosegmentation using Appearance and <br>Stereo Cues</strong><br>
+Multiple View Object Cosegmentation using Appearance and Stereo Cues</strong><br>
 <a href="http://eccv2012.unifi.it/">ECCV 2012</a><br>
 <font size = 2>
 We present an automatic approach to segment an object in calibrated images acquired from multiple viewpoints. Our system starts with a new piecewise planar layer-based stereo algorithm that estimates a dense depth map that consists of a set of 3D planar surfaces. The algorithm is formulated using an energy minimization framework that combines stereo and appearance cues, where for each surface<a href = "proj/MVSeg/index.html">...</a>
@@ -452,7 +452,7 @@ We present a novel multi-view stereo method designed for image-based rendering t
 <td style="width: 80%">			
 <span class="textStyle">
 <strong>
-Interactive 3D Architectural Modeling from Unordered<br> Photo Collections</strong><br>
+Interactive 3D Architectural Modeling from Unordered Photo Collections</strong><br>
 <a href="https://www.siggraph.org//asia2008/">SIGGRAPH Asia 2008</a><br>
 <font size = 2>
 We present an interactive system for generating photorealistic, textured, piecewise-planar 3D models of architectural structures and urban scenes from unordered sets of photographs. To reconstruct 3D geometry in our system, the user draws outlines overlaid on 2D photographs. The 3D structure is then automatically computed by combining the 2D interaction with the multi-view geometric information recovered by performing structure from motion analysis on the input photographs<a href = "http://vis.berkeley.edu/papers/photoModel/">...</a>
