--- a/Publications.html
+++ b/Publications.html
@@ -532,6 +532,12 @@ Computational Vision in Neural and Machine Systems, L. Harris and M. Jenkins (Ed
 <h2 id = "patents">Patents</h2>
 
 <p class="paperheading">
+Optimal Scanning Trajectories for 3D Scenes 
+[<a href="https://patents.justia.com/patent/20180367728">20180367728</a>] </p>
+Mike Roberts, Debadeepta Dey, Sudipta Sinha, Shital Shah, Ashish Kapoor, Neel Joshi<br>
+Publication, December 20, 2018<br> <p></p>
+
+<p class="paperheading">
 Scene reconstruction from bursts of image data 
 [<a href="https://patents.justia.com/patent/20180225836">20180225836</a>] </p>
 Neel Joshi, Sudipta Sinha, Minh P. Vo<br>
