added new publications

--- a/Publications.html
+++ b/Publications.html
@@ -45,6 +45,32 @@
 
 <br><br>
 
+<!-- ---------------------------------------------------------- -->
+<h3>2019</h3>
+<p class="paperheading">
+Privacy Preserving Image-Based Localization
+[<a href="https://demuc.de/papers/speciale2019.pdf">pdf</a>]</p>
+Pablo Speciale, Johannes L. Schönberger, Sing Bing Kang, Sudipta N. Sinha and Marc Pollefeys<br>
+<a href="http://cvpr2019.thecvf.com/">CVPR</a>, 2019<br> <p></p>
+
+<p class="paperheading">
+Revealing Scenes by Inverting Structure from Motion Reconstructions
+[<a href="https://www.francescopittaluga.com/pdf/revealing_scenes_by_inverting_structure_from_motion_reconstructions.pdf">pdf</a>]</p>
+Francesco Pittaluga, Sanjeev J. Koppal, Sing Bing Kang and Sudipta N. Sinha<br>
+<a href="http://cvpr2019.thecvf.com/">CVPR</a>, 2019<br> <p></p>
+
+<p class="paperheading">
+Photorealistic Image Synthesis for Object Instance Detection
+[<a href="https://arxiv.org/pdf/1902.03334.pdf">pdf</a>]</p>
+Tomas Hodan, Vibhav Vineet, Ran Gal, Emanuel Shalev, Jon Hanzelka, Treb Connell, Pedro Urbina, Sudipta N. Sinha and Brian Guenter<br>
+<a href="http://www.2019.ieeeicip.org/">ICIP</a>, 2019<br> <p></p>
+
+<p class="paperheading">
+Privacy-Preserving Action Recognition using Coded Aperture Videos
+[<a href="https://arxiv.org/pdf/1902.09085.pdf">pdf</a>]</p>
+Zihao W. Wang, Vibhav Vineet, Francesco Pittaluga, Sudipta Sinha, Oliver Cossairt and Sing Bing Kang<br>
+<a href="https://cvcops19.cispa.saarland/">CV-COPS</a>, 2019<br> <p></p>
+
 
 <!-- ---------------------------------------------------------- -->
 <h3>2018</h3>
@@ -52,21 +78,21 @@
 <p class="paperheading">
 Learning to Align Images using Weak Geometric Supervision
 [<a href="https://arxiv.org/pdf/1808.01424.pdf">pdf</a>]</p>
- Jing Dong, Byron Boots, Frank Dellaert, Ranveer Chandra and Sudipta N. Sinha<br>
-<a href="http://3dv18.uniud.it/">3DV</a>, 2018 (to appear)<br> <p></p>
+Jing Dong, Byron Boots, Frank Dellaert, Ranveer Chandra and Sudipta N. Sinha<br>
+<a href="http://3dv18.uniud.it/">3DV</a>, 2018<br> <p></p>
 
 <p class="paperheading">
 Learning to Fuse Proposals from Multiple Scanline Optimizations in Semi-Global Matching<br>
 [<a href="https://demuc.de/papers/schoenberger2018sgm.pdf">pdf</a>]
 [<a href="https://demuc.de/papers/schoenberger2018sgm_supp.pdf">supplementary</a>]</p>
 Johannes L. Schönberger, Sudipta N. Sinha, Marc Pollefeys<br>
-<a href="https://eccv2018.org/">ECCV</a>, 2018 (to appear)<br> <p></p>
+<a href="https://eccv2018.org/">ECCV</a>, 2018<br> <p></p>
 
 <p class="paperheading">
 Learn-to-Score: Efficient 3D Scene Exploration by Predicting View Utility
 [<a href="https://arxiv.org/abs/1806.10354v1">pdf</a>]</p>
 Benjamin Hepp, Debadeepta Dey, Sudipta N. Sinha, Ashish Kapoor, Neel Joshi, O Hilliges<br>
-<a href="https://eccv2018.org/">ECCV</a>, 2018 (to appear)<br> <p></p>
+<a href="https://eccv2018.org/">ECCV</a>, 2018<br> <p></p>
 
 <p class="paperheading">
 Real-Time Seamless Single Shot 6D Object Pose Prediction
