--- a/Activities.html
+++ b/Activities.html
@@ -32,6 +32,7 @@
 
 <p class="paperheading">Organizing, Service
 <ul>
+<li>Area Chair, International Conference on 3D Vision (3DV) 2019</li>
 <li>Associate Area Editor, Computer Vision and Image Understanding (CVIU) Journal</li>
 <li>Area Chair, International Conference on 3D Vision (3DV) 2018</li>
 <li>Program Chair, International Conference on 3D Vision (3DV) 2017</li>
@@ -44,20 +45,20 @@
 
 <p class="paperheading">Conference Program Committee
 <ul>
-<li>ACM Multimedia Conference 2016.</li>
-<li>IEEE Conference on Computer Vision and Pattern Recognition (CVPR) 2009 — 2018.</li>
-<li>British Machine Vision Conference (BMVC) 2017, 2018.</li>
+<li>IEEE Conference on Computer Vision and Pattern Recognition (CVPR) 2009 — 2019.</li>
+<li>IEEE International Conference on Computer Vision (ICCV) 2009 -- 2019.</li>
+<li>European Conference on Computer Vision (ECCV) 2008 -- 2018.</li>
+<li>British Machine Vision Conference (BMVC) 2017 -- 2019.</li>
 <li>3D Processing, Visualization and Transmission (3DPVT 2012, 3DV 2013, 2014, 2015).</li>
 <li>Asian Conference on Computer Vision (ACCV) 2009 -- 2018.</li>
-<li>European Conference on Computer Vision (ECCV) 2008 -- 2018.</li>
-<li>IEEE International Conference on Computer Vision (ICCV) 2009 -- 2017.</li>
 <li>Indian Conference on Vision, Graphics and Image Processing (ICVGIP) 2010, 2012, 2014, 2016.</li>
-
+<li>ACM Multimedia Conference 2016.</li>
 </ul>
 </p>
 
 <p class="paperheading">Workshop Program Committee
 <ul>
+<li>Photogrammetric Computer Vision Workshop (CVPR 2019).</li>
 <li>Workshop on Performance Metrics for Correspondence Problems (CVPR 2015).</li>
 <li>Ground Truth – What is a good dataset ? (CVPR 2013 Workshop).</li>
 <li>Workshop on Unsolved Problems in Optic Flow and Stereo Estimation (ECCV 2012).</li>
@@ -108,7 +109,7 @@
 
 <div id="footer-box">
 <hr>
-Last updated: April 19, 2018
+Last updated: May 20, 2019
 </div>
 
 </body></html>
