--- a/Publications.html
+++ b/Publications.html
@@ -69,7 +69,7 @@ Tomas Hodan, Vibhav Vineet, Ran Gal, Emanuel Shalev, Jon Hanzelka, Treb Connell,
 Privacy-Preserving Action Recognition using Coded Aperture Videos
 [<a href="https://arxiv.org/pdf/1902.09085.pdf">pdf</a>]</p>
 Zihao W. Wang, Vibhav Vineet, Francesco Pittaluga, Sudipta N. Sinha, Oliver Cossairt and Sing Bing Kang<br>
-<a href="https://cvcops19.cispa.saarland/">CV-COPS</a>, 2019<br> <p></p>
+<a href="https://cvcops19.cispa.saarland/">CV-COPS workshop (CVPR)</a>, 2019<br> <p></p>
 
 
 <!-- ---------------------------------------------------------- -->
