--- a/Others.html
+++ b/Others.html
@@ -83,12 +83,13 @@
 <p class="paperheading">Awards
 
 <ul>
+<li>Outstanding Reviewer, IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2019.</li>
 
 <li>Outstanding Reviewer, European Conference on Computer Vision (ECCV), 2016.</li>
 
 <li>Outstanding Reviewer, Asian Conference on Computer Vision (ACCV), 2014.</li>
 
-<li>Outstanding Reviewer, IEEE Conf. on Computer Vision & Pattern Recognition (CVPR) 2013.</li>
+<li>Outstanding Reviewer, IEEE Conference on Computer Vision and Pattern Recognition (CVPR) 2013.</li>
 
 <li>Outstanding Reviewer, Asian Conference on Computer Vision (ACCV), 2010.</li>
 
