--- a/Activities.html
+++ b/Activities.html
@@ -45,12 +45,12 @@
 
 <p class="paperheading">Conference Program Committee
 <ul>
-<li>IEEE Conference on Computer Vision and Pattern Recognition (CVPR) 2009 — 2019.</li>
-<li>IEEE International Conference on Computer Vision (ICCV) 2009 -- 2019.</li>
-<li>European Conference on Computer Vision (ECCV) 2008 -- 2018.</li>
-<li>British Machine Vision Conference (BMVC) 2017 -- 2019.</li>
-<li>3D Processing, Visualization and Transmission (3DPVT 2012, 3DV 2013, 2014, 2015).</li>
-<li>Asian Conference on Computer Vision (ACCV) 2009 -- 2018.</li>
+<li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2009 — 2019.</li>
+<li>IEEE International Conference on Computer Vision (ICCV) 2009 — 2019.</li>
+<li>European Conference on Computer Vision (ECCV) 2008 — 2018.</li>
+<li>British Machine Vision Conference (BMVC) 2017 — 2019.</li>
+<li>3D Processing, Visualization and Transmission (3DPVT 2012, 3DV 2013 — 2015).</li>
+<li>Asian Conference on Computer Vision (ACCV) 2009 — 2018.</li>
 <li>Indian Conference on Vision, Graphics and Image Processing (ICVGIP) 2010, 2012, 2014, 2016.</li>
 <li>ACM Multimedia Conference 2016.</li>
 </ul>
