--- a/Publications.html
+++ b/Publications.html
@@ -375,7 +375,13 @@ Multi-View Stereo via Graph Cuts on the Dual of an Adaptive Tetrahedral Mesh
 Sudipta Sinha, Philippos Mordohai and Marc Pollefeys<br>
 <a href="http://iccv2007.rutgers.edu/">ICCV</a> 2007.<p></p>
 
-  
+<p class="paperheading">
+Real-time Video-based Reconstruction of Urban Environments
+[<a href="https://www.isprs.org/proceedings/XXXVI/5-W47/pdf/mordohai_etal.pdf">pdf</a>]</p>
+P.Mordohai, J.-M.Frahm, A.Akbarzadeh, B.Clipp, C.Engels, D.Gallup, P.Merrell, C.Salmi, S.Sinha, B.Talton, L.Wang, Q.Yang, H.Stewenius, H.Towles, G.Welch, R.Yang, M.Pollefeys andD.Nist´er
+<br>
+<a href="https://www.isprs.org/">ISPRS Working Group 4</a> 2007.<p></p>
+ 
   
 <!-- ---------------------------------------------------------- -->
 <h3>2006</h3>
