updated css and one publication entry syntax

--- a/Publications.html
+++ b/Publications.html
@@ -48,11 +48,12 @@
 <!-- ---------------------------------------------------------- -->
 <h3>2019</h3>
 
-<p class="paperheading">
-Photorealistic Image Synthesis for Object Instance Detection
-[<a href="https://arxiv.org/pdf/1902.03334.pdf">pdf</a>]</p>
-Tomas Hodan, Vibhav Vineet, Ran Gal, Emanuel Shalev, Jon Hanzelka, Treb Connell, Pedro Urbina, Sudipta N. Sinha and Brian Guenter<br>
-<a href="http://www.2019.ieeeicip.org/">ICIP</a>, 2019<br> <p></p>
+<p> 
+<span class="paperheading">Photorealistic Image Synthesis for Object Instance Detection</span>
+<span class="authors">Tomas Hodan, Vibhav Vineet, Ran Gal, Emanuel Shalev, Jon Hanzelka, Treb Connell, Pedro Urbina, Sudipta N. Sinha and Brian Guenter</span>
+<span class="booktitle">IEEE International Conference on Image Processing (<a href="http://www.2019.ieeeicip.org/">ICIP 2019</a>)</span>
+[<a href="https://arxiv.org/pdf/1902.03334.pdf">pdf</a>]
+</p>
 
 <p class="paperheading">
 Low-cost Aerial Imaging for Small Holder Farmers
