--- a/Publications.html
+++ b/Publications.html
@@ -732,4 +732,9 @@ Granted, January 13, 2015<br> <p></p>
 
 <br>
 
+<div id="footer-box">
+<hr>
+Last updated: July 29, 2019
+</div>
+
 </body></html>
