--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="./css/index.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 .auto-style1 {
-	text-align: center;
+	text-align: left;
 }
 </style>
 </head>
@@ -59,7 +59,7 @@
 
 <div id="footer-box">
 <hr>
-Last updated: November 4, 2018
+Last updated: July 29, 2019
 </div>
 
 </body></html>
