--- a/Publications.html
+++ b/Publications.html
@@ -47,7 +47,12 @@
 
 <!-- ---------------------------------------------------------- -->
 <h3>2019</h3>
-
+<p> 
+<span class="paperheading">Privacy Preserving Image Queries for Camera Localization</span>
+<span class="authors">Pablo Speciale, Johannes L. Schönberger, Sudipta N. Sinha and Marc Pollefeys</span>
+<span class="booktitle">CVF/IEEE International Conference on Computer Vision (ICCV 2019)</span>
+[<a href="pdfs/SpecialeICCV2019.pdf">pdf</a>]&nbsp[<a href="pdfs/SpecialeICCV2019_supp.pdf">supplementary pdf</a>]
+</p>
 
 <p> 
 <span class="paperheading">Photorealistic Image Synthesis for Object Instance Detection</span>
@@ -100,7 +105,7 @@
 <span class="paperheading">Learning to Fuse Proposals from Multiple Scanline Optimizations in Semi-Global Matching</span>
 <span class="authors">Johannes L. Schönberger, Sudipta N. Sinha, Marc Pollefeys</span>
 <span class="booktitle">European Conference on Computer Vision (ECCV 2018)</span>
-[<a href="https://demuc.de/papers/schoenberger2018sgm.pdf">pdf</a>]&nbsp[<a href="https://demuc.de/papers/schoenberger2018sgm_supp.pdf">supplementary</a>]
+[<a href="https://demuc.de/papers/schoenberger2018sgm.pdf">pdf</a>]&nbsp[<a href="https://demuc.de/papers/schoenberger2018sgm_supp.pdf">supplementary pdf</a>]
 </p>
 
 <p>
