--- a/Others.html
+++ b/Others.html
@@ -106,6 +106,7 @@
 <p class="paperheading">Talks
 
 <ul>
+<li>Privacy-Preserving Image-based Localization, <br>Invited talk, Osaka University, October 2019.</li>
 <li>Recovering Image Correspondence: New Methods and Applications,<br> Shonan meeting on <a href="https://cs.adelaide.edu.au/~tjchin/shonan140/">Optimization Methods in Geometric Vision</a>, NII Shonan, January 2019.</li>
 
 <li>Recent Progress in Stereo, Scene Flow and Object Pose Prediction,<br>Invited talk, Georgia Tech, August 2018.</li>
