--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<tbody><tr><br>
 			<td style="height: 16px"><span class="headerStyle1">Sudipta Sinha<br>
 			</span><span class="headerStyle2">
-			Microsoft Research,<br>Redmond, USA<br><br>
+			Principal Researcher, Microsoft,<br>Redmond, USA<br><br>
 			</span>
 			
 			<span class="headerStyle2">
@@ -49,7 +49,7 @@
 			<span class="textStyle"><a href="https://www.linkedin.com/in/sudipsin">LinkedIn</a></span><br>
 			<span class="textStyle"><a href="https://www.researchgate.net/profile/Sudipta_Sinha8">ResearchGate</a></span><br>
 			<span class="textStyle"><a href="https://scholar.google.com/citations?user=Z6gnDIEAAAAJ&hl=en&oi=ao">Google Scholar</a></span><br>
-			<span class="textStyle"><a href="https://www.microsoft.com/en-us/research/people/sudipsin/">Microsoft Research page</a></span><br>
+			<span class="textStyle"><a href="https://www.microsoft.com/en-us/research/people/sudipsin/">Microsoft</a></span><br>
 			<span class="textStyle">Email: sudipta-dot-sinha-at-microsoft.com</span><br>			
 			</td>
 			<td></td>
