--- a/Activities.html
+++ b/Activities.html
@@ -84,7 +84,7 @@
 <li>SIGGRAPH 2008–-2018</li> 
 <li>SIGGRAPH Asia 2009–-2012, 2016</li>
 <li>EuroGraphics 2012, 2014, 2015, 2016</li>
-<li>ICRA 2015, 2016</li>
+<li>ICRA 2015, 2016, 2020</li>
 <li>IROS 2016, 2018</li>
 <li>ACM Transaction on Graphics (ToG)</li>
 <li>International Journal of Computer Vision (IJCV)</li>
