--- a/Others.html
+++ b/Others.html
@@ -107,7 +107,8 @@
 
 <ul>
 <li>Privacy-Preserving Image-based Localization, <br>Invited talk, Osaka University, October 2019 [<a href="https://snsinha.github.io/talks/10252019OsakaUnivTalk_slides.pdf">pdf</a>].</li>
-<li>Recovering Image Correspondence: New Methods and Applications,<br> Shonan meeting on <a href="https://cs.adelaide.edu.au/~tjchin/shonan140/">Optimization Methods in Geometric Vision</a>, NII Shonan, January 2019.</li>
+
+<li>Recovering Image Correspondence: New Methods and Applications,<br> Shonan meeting on <a href="https://cs.adelaide.edu.au/~tjchin/shonan140/">Optimization Methods in Geometric Vision</a>, NII Shonan, January 2019 [<a href="https://snsinha.github.io/talks/01282019NIIShonan_slides.pdf">pdf</a>].</li>
 
 <li>Recent Progress in Stereo, Scene Flow and Object Pose Prediction,<br>Invited talk, Georgia Tech, August 2018.</li>
 
@@ -117,9 +118,9 @@
 
 <li>FarmBeats: AI and IoT for Agriculture (with R. Chandra),<br><a href="http://events.cornell.edu/event/farmbeats_ai_iot_for_agriculture_computational_sustainability_virtual_seminar_series">Computational Sustainability Virtual Seminar</a>, February 2018.</li>
 
-<li>Flexible priors for robust dense stereo matching,<br><a href="https://seis.bristol.ac.uk/~csadc/LPM17/">International Workshop on Lines, Planes and Manhattan Models for 3-D Mapping (LPM 2017)</a>,<br>IROS workshop, September 2017.</li>
+<li>Flexible priors for robust dense stereo matching,<br><a href="https://seis.bristol.ac.uk/~csadc/LPM17/">International Workshop on Lines, Planes and Manhattan Models for 3-D Mapping (LPM 2017)</a>,<br>IROS workshop, September 2017 [<a href="https://snsinha.github.io/talks/09282017IROS-LPMWorkshopTalk_slides.pdf">pdf</a>].</li>
 
-<li>Towards exploiting image correspondence for weakly supervised visual recognition,<br><a href="https://www.microsoft.com/en-us/research/event/asia-faculty-summit-2016/">Microsoft Research Asia Faculty Summit</a>, Yonsei University, November 2016.</li>
+<li>Towards exploiting image correspondence for weakly supervised visual recognition,<br><a href="https://www.microsoft.com/en-us/research/event/asia-faculty-summit-2016/">Microsoft Research Asia Faculty Summit</a>, Yonsei University, November 2016 [<a href="https://snsinha.github.io/talks/11042016-AsiaFacultySummit_slides.pdf">pdf</a>].</li>
 
 <li>Correspondence Estimation in Images: New Techniques and Applications,<br>GRAIL seminar, University of Washington, Seattle, April 2016.</li>
 
