updated talk slides

--- a/Activities.html
+++ b/Activities.html
@@ -45,7 +45,8 @@
 
 <p class="paperheading">Conference Program Committee
 <ul>
-<li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2009 — 2019.</li>
+<li>AAAI Conference on Artificial Intelligence, 2019 (PC), 2020 (Senior PC).</li>
+<li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2009 — 2020.</li>
 <li>IEEE International Conference on Computer Vision (ICCV) 2009 — 2019.</li>
 <li>European Conference on Computer Vision (ECCV) 2008 — 2018.</li>
 <li>British Machine Vision Conference (BMVC) 2017 — 2019.</li>
