--- a/Others.html
+++ b/Others.html
@@ -64,7 +64,7 @@
 
 <ul> 
 
-<li>3rd Summer School on Computer Vision<a href="http://cvit.iiit.ac.in/cvsummerschool2018/index.html">, Basics OF Modern AI</a>, IIIT Hyderabad, July 2-7, 2018.</li>
+<li>3rd Summer School on Computer Vision<a href="http://cvit.iiit.ac.in/cvsummerschool2018/index.html">, Basics OF Modern AI</a>, IIIT Hyderabad, July 2-7, 2018 <br>[<a href="https://snsinha.github.io/talks/2018_IIITH-AISummerSchool_Sinha-2.pdf">part1</a>]&nbsp; [<a href="https://snsinha.github.io/talks/2018_IIITH-AISummerSchool_Sinha-2.pdf">part2</a>].</li>
 
 <li>IROS 2017 Tutorial: Computer Vision on Microsoft HoloLens</li>
 
@@ -106,39 +106,39 @@
 <p class="paperheading">Talks
 
 <ul>
-<li>Privacy-Preserving Image-based Localization, <br>Invited talk, Osaka University, October 2019 [<a href="https://snsinha.github.io/talks/10252019OsakaUnivTalk_slides.pdf">pdf</a>].</li>
+<li>Privacy-Preserving Image-based Localization, <br>Invited talk, Osaka University, October 2019 [<a href="https://snsinha.github.io/talks/10252019OsakaUnivTalk_slides.pdf">pdf</a>].</li><br>
 
-<li>Recovering Image Correspondence: New Methods and Applications,<br> Shonan meeting on <a href="https://cs.adelaide.edu.au/~tjchin/shonan140/">Optimization Methods in Geometric Vision</a>, NII Shonan, January 2019 [<a href="https://snsinha.github.io/talks/01282019NIIShonan_slides.pdf">pdf</a>].</li>
+<li>Recovering Image Correspondence: New Methods and Applications,<br> Shonan meeting on <a href="https://cs.adelaide.edu.au/~tjchin/shonan140/">Optimization Methods in Geometric Vision</a>, NII Shonan, January 2019 [<a href="https://snsinha.github.io/talks/01282019NIIShonan_slides.pdf">pdf</a>].</li><br>
 
-<li>Recent Progress in Stereo, Scene Flow and Object Pose Prediction,<br>Invited talk, Georgia Tech, August 2018.</li>
+<li>Recent Progress in Stereo, Scene Flow and Object Pose Prediction,<br>Invited talk, Georgia Tech, August 2018 [<a href="https://snsinha.github.io/talks/2018_GeorgiaTech_talk_slides_Sinha.pdf">pdf</a>].</li><br>
 
-<li>Efficient and Accurate 3D Scene Reconstruction and Object Pose Prediction,<br>Invited talk, University of Illinois, Urbana Champaign, May 2018.</li>
+<li>Efficient and Accurate 3D Scene Reconstruction and Object Pose Prediction,<br>Invited talk, University of Illinois, Urbana Champaign, May 2018 [<a href="https://snsinha.github.io/talks/2018_UIUC_talk_slides_Sinha.pdf">pdf</a>] .</li><br>
 
-<li>Dense correspondence recovery involving images and 3D models,<br><a href="http://www.cs.utah.edu/calendar/seminar-sudipta-sinha/">Invited talk, University of Utah</a>, February 2018.</li>
+<li>Dense correspondence recovery involving images and 3D models,<br><a href="http://www.cs.utah.edu/calendar/seminar-sudipta-sinha/">Invited talk, University of Utah</a>, March 2018 [<a href="https://snsinha.github.io/talks/2018_UnivOfUtah_talk_slides_Sinha.pdf">pdf</a>].</li><br>
 
-<li>FarmBeats: AI and IoT for Agriculture (with R. Chandra),<br><a href="http://events.cornell.edu/event/farmbeats_ai_iot_for_agriculture_computational_sustainability_virtual_seminar_series">Computational Sustainability Virtual Seminar</a>, February 2018.</li>
+<li>FarmBeats: AI and IoT for Agriculture (with R. Chandra),<br><a href="http://events.cornell.edu/event/farmbeats_ai_iot_for_agriculture_computational_sustainability_virtual_seminar_series">Computational Sustainability Virtual Seminar</a>, February 2018 [<a href="https://snsinha.github.io/talks/2018_FarmBeats_CompSustNet_talk_slides.pdf">pdf</a>].</li><br>
 
-<li>Flexible priors for robust dense stereo matching,<br><a href="https://seis.bristol.ac.uk/~csadc/LPM17/">International Workshop on Lines, Planes and Manhattan Models for 3-D Mapping (LPM 2017)</a>,<br>IROS workshop, September 2017 [<a href="https://snsinha.github.io/talks/09282017IROS-LPMWorkshopTalk_slides.pdf">pdf</a>].</li>
+<li>Flexible priors for robust dense stereo matching,<br><a href="https://seis.bristol.ac.uk/~csadc/LPM17/">International Workshop on Lines, Planes and Manhattan Models for 3-D Mapping (LPM 2017)</a>,<br>IROS workshop, September 2017 [<a href="https://snsinha.github.io/talks/09282017IROS-LPMWorkshopTalk_slides.pdf">pdf</a>].</li><br>
 
-<li>Towards exploiting image correspondence for weakly supervised visual recognition,<br><a href="https://www.microsoft.com/en-us/research/event/asia-faculty-summit-2016/">Microsoft Research Asia Faculty Summit</a>, Yonsei University, November 2016 [<a href="https://snsinha.github.io/talks/11042016-AsiaFacultySummit_slides.pdf">pdf</a>].</li>
+<li>Towards exploiting image correspondence for weakly supervised visual recognition,<br><a href="https://www.microsoft.com/en-us/research/event/asia-faculty-summit-2016/">Microsoft Research Asia Faculty Summit</a>, Yonsei University, November 2016 [<a href="https://snsinha.github.io/talks/11042016-AsiaFacultySummit_slides.pdf">pdf</a>].</li><br>
 
-<li>Correspondence Estimation in Images: New Techniques and Applications,<br>GRAIL seminar, University of Washington, Seattle, April 2016.</li>
+<li>Correspondence Estimation in Images: New Techniques and Applications,<br>GRAIL seminar, University of Washington, Seattle, April 2016 [<a href="https://snsinha.github.io/talks/2016_UW-GRAIL_talk_slides_Sinha.pdf">pdf</a>].</li><br>
 
-<li>Efficient high-resolution stereo matching using local plane sweeps,<br><a href="http://www.imgfsr.com/CVPR2014IRW/">CVPR Workshop on Registration of Very Large Images</a>, June 2014.</li>
+<li>Efficient high-resolution stereo matching using local plane sweeps,<br><a href="http://www.imgfsr.com/CVPR2014IRW/">CVPR Workshop on Registration of Very Large Images</a>, June 2014.</li><br>
 
-<li>Recent work in image-based rendering from unstructured image collections and remaining challenges,<br><a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=10371">Dynamic Maps Dagstuhl Seminar</a>, September 2010.</li>
+<li>Recent work in image-based rendering from unstructured image collections and remaining challenges,<br><a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=10371">Dynamic Maps Dagstuhl Seminar</a>, September 2010.</li><br>
 
-<li>Parallel Computer Vision Algorithms, (with Rick Szeliski and Sameer Agarwal),<br>UPCRC Multicore Applications Workshop, Microsoft Research, May 2009.</li>
+<li>Parallel Computer Vision Algorithms, (with Rick Szeliski and Sameer Agarwal),<br>UPCRC Multicore Applications Workshop, Microsoft Research, May 2009.</li><br>
 
-<li>Multi-view approaches for camera calibration and image-based modeling, <a href="https://www.youtube.com/watch?v=CRX5__R1NvM">[YouTube]</a><br>Candidate Talk, Microsoft Research, April 2008.</li>
+<li>Multi-view approaches for camera calibration and image-based modeling, <a href="https://www.youtube.com/watch?v=CRX5__R1NvM">[YouTube]</a><br>Candidate Talk, Microsoft Research, April 2008.</li><br>
 
-<li>Silhouettes for calibration and reconstruction from multiple views,<br>Indian Institute of Information Technology, (IIIT) Hyderabad, April 2007.</li>
+<li>Silhouettes for calibration and reconstruction from multiple views,<br>Indian Institute of Information Technology, (IIIT) Hyderabad, April 2007.</li><br>
 
-<li>Synchronization and Calibration of a Camera Network for 3D Event Reconstruction from Live Video,<br>Mathematical Methods in Computer Vision workshop, Banff,October 2006.</li>
+<li>Synchronization and Calibration of a Camera Network for 3D Event Reconstruction from Live Video,<br>Mathematical Methods in Computer Vision workshop, Banff,October 2006.</li><br>
 
-<li>Computer Vision using GPUs,<br>Guest lecture, UNC Chapel Hill, February 2007.</li>
+<li>Computer Vision using GPUs,<br>Guest lecture, UNC Chapel Hill, February 2007.</li><br>
 
-<li>Feature tracking and matching,<br>Guest lecture, UNC Chapel Hill, August 2006.</li>
+<li>Feature tracking and matching,<br>Guest lecture, UNC Chapel Hill, August 2006.</li><br>
 
 <li>Graph Cuts for Discrete Optimization},<br>Guest lecture, UNC Chapel Hill, April 2005.</li>
 
