--- a/Activities.html
+++ b/Activities.html
@@ -27,7 +27,7 @@
 <div id="body-box">
 
 <br>
-<h2>Sudipta Sinha - Professional Activities etc.</h2>
+<h2>Sudipta N. Sinha - Professional Activities etc.</h2>
 
 
 <p class="paperheading">Organizing, Service
