--- a/Research.html
+++ b/Research.html
@@ -27,7 +27,7 @@
 <div id="body-box">
 
 <br>
-<h2>Sudipta Sinha - Research</h2>
+<h2>Sudipta N. Sinha - Research</h2>
 
 
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
