--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="body-box" class="auto-style1">
 	<table class="textStyle" style="width: 100%">
 		<tbody><tr><br>
-			<td style="height: 16px"><span class="headerStyle1">Sudipta Sinha<br>
+			<td style="height: 16px"><span class="headerStyle1">Sudipta N. Sinha<br>
 			</span><span class="headerStyle2">
 			Principal Researcher, Microsoft,<br>Redmond, USA<br><br>
 			</span>
