updated research page and one pdf

--- a/Research.html
+++ b/Research.html
@@ -34,6 +34,75 @@
 
 <tbody>
 
+<tr class="spaceUnder">
+<td style="width: 20%">
+<img alt="" src="img/SpecialeICCV2019.jpg" width="130"></td>
+<td style="width: 80%">			
+<span class="textStyle">
+<strong>
+Privacy Preserving Image Queries for Camera Localization</strong><br>
+<a href="http://iccv2019.thecvf.com/">ICCV 2019</a><br>
+<font size = 2>
+We have developed a new 6-DoF camera localization technique that conceals the content of the query image when localization is performed in a cloud-based service. This is a follow up of our previous work on privacy preserving camera localization where we devised a way to conceal the 3D point cloud map which is used for localization.
+<a href = "https://www.microsoft.com/en-us/research/project/privacy-preserving-image-queries-for-camera-localization/">...</a>
+</font><br>
+<a href="pdfs/SpecialeICCV2019.pdf"><img src="img/pdf.jpg" width="24"></a>&nbsp;<a href="https://www.microsoft.com/en-us/research/project/privacy-preserving-image-queries-for-camera-localization/"><img src="img/www.jpg" width="24"></a><br>
+</span>
+</td>
+</tr>
+
+<tr class="spaceUnder">
+<td style="width: 20%">
+<img alt="" src="img/SpecialeCVPR2019.jpg" width="150"></td>
+<td style="width: 80%">			
+<span class="textStyle">
+<strong>
+Privacy Preserving Image-Based Localization</strong><br>
+<a href="http://cvpr2019.thecvf.com/">CVPR 2019</a><br>
+<font size = 2>
+How can we avoid disclosing confidential information about the captured 3D scene, and yet allow reliable camera pose estimation? This paper proposes the first solution to what we call privacy preserving image-based localization using new ideas from geometry.
+<a href = "https://www.microsoft.com/en-us/research/blog/envisioning-privacy-preserving-image-based-localization-for-augmented-reality/">...</a>
+</font><br>
+<a href="pdfs/SpecialeCVPR2019.pdf"><img src="img/pdf.jpg" width="24"></a>&nbsp;<a href="https://www.microsoft.com/en-us/research/blog/envisioning-privacy-preserving-image-based-localization-for-augmented-reality/"><img src="img/www.jpg" width="24"></a><br>
+</span>
+</td>
+</tr>
+
+<tr class="spaceUnder">
+<td style="width: 20%">
+<img alt="" src="img/PittalugaCVPR2019.jpg" width="150"></td>
+<td style="width: 80%">			
+<span class="textStyle">
+<strong>
+Inverting Structure from Motion Reconstructions</strong><br>
+<a href="http://cvpr2019.thecvf.com/">CVPR 2019</a><br>
+<font size = 2>
+We show, for the first time, that SfM point clouds and features retain enough information to reveal scene appearance and compromise privacy. We present a privacy attack that reconstructs color images of the scene.
+<a href = "
+https://www.francescopittaluga.com/invsfm/index.html">...</a>
+</font><br>
+<a href="pdfs/SpecialeCVPR2019.pdf"><img src="img/pdf.jpg" width="24"></a>&nbsp;<a href="https://www.francescopittaluga.com/invsfm/index.html"><img src="img/www.jpg" width="24"></a>&nbsp;<a href="https://www.youtube.com/watch?v=M4U9sXE84rY"><img src="img/yt.jpg" width="24"></a><br>
+</span>
+</td>
+</tr>
+
+<tr class="spaceUnder">
+<td style="width: 20%">
+<img alt="" src="img/SchoenbergerECCV2018.jpg" width="150"></td>
+<td style="width: 80%">			
+<span class="textStyle">
+<strong>
+Learning to Fuse Proposals in Semi-Global Matching
+</strong><br>
+<a href="https://eccv2018.org">ECCV 2018</a><br>
+<font size = 2>
+We propose SGM-Forest, an efficient extension to the SGM stereo matching algorithm, that uses a random decision forest classifier to fuse multiple disparity map proposals, each of which is obtained by solving an independent 1D scanline optimization problem. SGM-Forest is consistently more accurate than SGM and its performance generalize very well to new datasets.
+<a href = "https://www.microsoft.com/en-us/research/publication/learning-to-fuse-proposals-from-multiple-scanline-optimizations-in-semi-global-matching/">...</a>
+</font><br>
+<a href="pdfs/SchoenbergerECCV2018.pdf"><img src="img/pdf.jpg" width="24"></a>&nbsp;<a href="https://www.microsoft.com/en-us/research/publication/learning-to-fuse-proposals-from-multiple-scanline-optimizations-in-semi-global-matching/"><img src="img/www.jpg" width="24"></a><br>
+</span>
+</td>
+</tr>
 
 <tr class="spaceUnder">
 <td style="width: 20%">
@@ -51,7 +120,6 @@ We propose a single-shot approach for simultaneously detecting an object in an R
 </td>
 </tr>
 
-
 <tr class="spaceUnder">
 <td style="width: 20%">
 <img alt="" src="img/ICCV2017.jpg" width="150"></td>
@@ -68,8 +136,6 @@ Drones equipped with cameras are emerging as a powerful tool for large-scale aer
 </td>
 </tr>
 
-
-
 <tr class="spaceUnder">
 <td style="width: 20%">
 <img alt="" src="img/CVPR2017.jpg" width="150"></td>
@@ -85,7 +151,6 @@ We propose a new multi-frame method for efficiently computing scene flow (dense 
 </td>
 </tr>
 
-
 <tr class="spaceUnder">
 <td style="width: 20%">
 <img alt="" src="img/CVPR2017b.jpg" width="150"></td>
@@ -95,14 +160,12 @@ We propose a new multi-frame method for efficiently computing scene flow (dense 
 Flight Dynamics-based Recovery of a UAV Trajectory using Ground Cameras</strong><br>
 <a href="http://cvpr2017.thecvf.com/">CVPR 2017</a><br>
 <font size = 2>
-
 We propose a new method to estimate the 6-dof trajectory of a flying object such as a quadrotor UAV within a 3D airspace monitored using multiple fixed ground cameras. It is based on a new structure from motion formulation for the 3D reconstruction of a single moving point with known motion dynamics. Our main contribution is a new bundle adjustment procedure which in addition to optimizing the camera poses, regularizes the point trajectory using a prior based on motion dynamics (or specifically flight dynamics) <a href = "">...</a>
 </font><br>
 <a href="pdfs/RozantsevCVPR2017.pdf"><img src="img/pdf.jpg" width="24"></a>&nbsp;<a href="https://snsinha.github.io/proj/UAVTrajRecon/index.html"><img src="img/www.jpg" width="24"></a>&nbsp;<a href="https://www.youtube.com/watch?v=udZdh0VsxvM"><img src="img/yt.jpg" width="24"></a><br>
 </span>
 </td>
 </tr>
-
 
 <tr class="spaceUnder">
 <td style="width: 20%">
@@ -121,7 +184,6 @@ Data-driven techniques help boost agricultural productivity by increasing yields
 </td>
 </tr>
 
-
 <tr class="spaceUnder">
 <td style="width: 20%">
 <img alt="" src="img/TPAMI2017.jpg" width="150"></td>
@@ -138,8 +200,6 @@ We propose a robust uncalibrated multiview photometric stereo method for high qu
 </td>
 </tr>
 
-
-
 <tr class="spaceUnder">
 <td style="width: 20%">
 <img alt="" src="img/TPAMI2017b.jpg" width="150"></td>
@@ -155,8 +215,6 @@ Digitally unwrapping images of paper sheets is crucial for accurate document sca
 </span>
 </td>
 </tr>
-
-
 
 <tr class="spaceUnder">
 <td style="width: 20%">
