updated CV, publication list

--- a/Publications.html
+++ b/Publications.html
@@ -45,7 +45,16 @@
 
 <br><br>
 
-<!-- ---------------------------------------------------------- -->
+<!-------------------------------------------------------------->
+<h3>2020</h3>
+<p> 
+<span class="paperheading">Towards Privacy-Preserving Ego-Motion Estimation using an Extremely Low-Resolution Camera</span>
+<span class="authors">Armon Shariati, Christian Holz and Sudipta N. Sinha</span>
+<span class="booktitle">IEEE Robotics and Automation Letters (RA-L), January 2020</span>
+[<a href="pdfs/SpecialeICCV2019.pdf">pdf (coming soon!)</a>]
+</p>
+
+<!-------------------------------------------------------------->
 <h3>2019</h3>
 <p> 
 <span class="paperheading">Privacy Preserving Image Queries for Camera Localization</span>
