updated pubs, cv.

--- a/Publications.html
+++ b/Publications.html
@@ -47,11 +47,20 @@
 
 <!-------------------------------------------------------------->
 <h3>2020</h3>
+
+<p> 
+<span class="paperheading">ActiveMoCap: Optimized Drone Flight for Active Human Motion Capture</span>
+<span class="authors">
+Sena Kiciroglu, Helge Rhodin, Sudipta Sinha, Mathieu Salzmann and Pascal Fua</span>
+<span class="booktitle">CVF/IEEE Conference on Computer Vision and Pattern Recognition (CVPR 2020)</span>
+[<a href="https://arxiv.org/pdf/1912.08568.pdf">pdf coming soon</a>]
+</p>
+
 <p> 
 <span class="paperheading">Towards Privacy-Preserving Ego-Motion Estimation using an Extremely Low-Resolution Camera</span>
 <span class="authors">Armon Shariati, Christian Holz and Sudipta N. Sinha</span>
 <span class="booktitle">IEEE Robotics and Automation Letters (RA-L), January 2020</span>
-[<a href="pdfs/SpecialeICCV2019.pdf">pdf (coming soon!)</a>]
+[<a href="pdfs/ShariatiHolzSinhaRAL2020.pdf">pdf</a>]
 </p>
 
 <!-------------------------------------------------------------->
