--- a/Activities.html
+++ b/Activities.html
@@ -45,7 +45,8 @@
 
 <p class="paperheading">Conference Program Committee
 <ul>
-<li>AAAI Conference on Artificial Intelligence, 2019 (PC), 2020 (Senior PC).</li>
+<li>IJCAI-PRICAI 2020 (Senior PC).</li>
+<li>AAAI Conference on Artificial Intelligence, 2019.</li>
 <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2009 — 2020.</li>
 <li>IEEE International Conference on Computer Vision (ICCV) 2009 — 2019.</li>
 <li>European Conference on Computer Vision (ECCV) 2008 — 2018.</li>
@@ -89,10 +90,10 @@
 <li>IROS 2016, 2018</li>
 <li>ACM Transaction on Graphics (ToG)</li>
 <li>International Journal of Computer Vision (IJCV)</li>
-<li>IEEE Transactions on Pattern Analysis and Machine Intelligence (T-PAMI)</li>
+<li>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</li>
 <li>IEEE Transactions on Visualization and Computer Graphics (TVCG)</li>
 <li>IEEE Transactions of Computational Imaging (TCI)</li>
-<li>IEEE Transactions on Multimedia (T-MM)</li>
+<li>IEEE Transactions on Multimedia (TMM)</li>
 <li>IEEE Transaction on Image Processing (TIP)</li>
 <li>Computer Vision and Image Understanding (CVIU)</li>
 <li>Journal of Visual Communication and Image Representation (JVCI)</li>
