--- a/Publications.html
+++ b/Publications.html
@@ -49,11 +49,11 @@
 <h3>2020</h3>
 
 <p> 
-<span class="paperheading">ActiveMoCap: Optimized Drone Flight for Active Human Motion Capture</span>
+<span class="paperheading">ActiveMoCap: Optimized Viewpoint Selection for Active Human Motion Capture</span>
 <span class="authors">
-Sena Kiciroglu, Helge Rhodin, Sudipta Sinha, Mathieu Salzmann and Pascal Fua</span>
+Sena Kiciroglu, Helge Rhodin, Sudipta N. Sinha, Mathieu Salzmann and Pascal Fua</span>
 <span class="booktitle">CVF/IEEE Conference on Computer Vision and Pattern Recognition (CVPR 2020)</span>
-[<a href="https://arxiv.org/pdf/1912.08568.pdf">pdf coming soon</a>]
+[<a href="pdfs/KicirogluCVPR2020.pdf">pdf</a>]&nbsp[<a href="pdfs/KicirogluCVPR2020_supp.pdf">supplementary pdf</a>]
 </p>
 
 <p> 
