updated talk list.

--- a/Others.html
+++ b/Others.html
@@ -106,6 +106,12 @@
 <p class="paperheading">Talks
 
 <ul>
+
+<li>
+Project FarmBeats: Aerial Mapping for Agricultural Farms and Beyond, <br>Invited talk, 
+The 1st International Workshop on Agriculture-Vision<br>
+IEEE/CVF CVPR 2020 Workshop, [<a href="https://www.youtube.com/watch?v=_7XGX2YDR5Q">video</a>].</li><br>
+
 <li>Privacy-Preserving Image-based Localization, <br>Invited talk, Osaka University, October 2019 [<a href="https://snsinha.github.io/talks/10252019OsakaUnivTalk_slides.pdf">pdf</a>].</li><br>
 
 <li>Recovering Image Correspondence: New Methods and Applications,<br> Shonan meeting on <a href="https://cs.adelaide.edu.au/~tjchin/shonan140/">Optimization Methods in Geometric Vision</a>, NII Shonan, January 2019 [<a href="https://snsinha.github.io/talks/01282019NIIShonan_slides.pdf">pdf</a>].</li><br>
