--- a/Activities.html
+++ b/Activities.html
@@ -32,6 +32,8 @@
 
 <p class="paperheading">Organizing, Service
 <ul>
+<li>Area Chair, International Conference on 3D Vision (3DV) 2020</li>
+<li>Senior Program Committee member, IJCAI-PRICAI 2020</li>
 <li>Area Chair, International Conference on 3D Vision (3DV) 2019</li>
 <li>Associate Area Editor, Computer Vision and Image Understanding (CVIU) Journal</li>
 <li>Area Chair, International Conference on 3D Vision (3DV) 2018</li>
@@ -45,11 +47,11 @@
 
 <p class="paperheading">Conference Program Committee
 <ul>
-<li>IJCAI-PRICAI 2020 (Senior PC).</li>
+<li>NeurIPS, 2020.</li>
 <li>AAAI Conference on Artificial Intelligence, 2019.</li>
 <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2009 — 2020.</li>
 <li>IEEE International Conference on Computer Vision (ICCV) 2009 — 2019.</li>
-<li>European Conference on Computer Vision (ECCV) 2008 — 2018.</li>
+<li>European Conference on Computer Vision (ECCV) 2008 — 2020.</li>
 <li>British Machine Vision Conference (BMVC) 2017 — 2019.</li>
 <li>3D Processing, Visualization and Transmission (3DPVT 2012, 3DV 2013 — 2015).</li>
 <li>Asian Conference on Computer Vision (ACCV) 2009 — 2018.</li>
@@ -83,11 +85,6 @@
 
 <p class="paperheading">Reviewer
 <ul>
-<li>SIGGRAPH 2008–-2018</li> 
-<li>SIGGRAPH Asia 2009–-2012, 2016</li>
-<li>EuroGraphics 2012, 2014, 2015, 2016</li>
-<li>ICRA 2015, 2016, 2020</li>
-<li>IROS 2016, 2018</li>
 <li>ACM Transaction on Graphics (ToG)</li>
 <li>International Journal of Computer Vision (IJCV)</li>
 <li>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</li>
@@ -101,6 +98,12 @@
 <li>Image and Visual Computing (IVC)</li>
 <li>IEEE Pervasive Computing</li>
 <li>Optics</li>
+<li>SIGGRAPH 2008–-2018</li> 
+<li>SIGGRAPH Asia 2009–-2012, 2016</li>
+<li>EuroGraphics 2012, 2014, 2015, 2016</li>
+<li>ICRA 2015, 2016, 2020</li>
+<li>IROS 2016, 2018, 2020</li>
+<li>CoRL 2017</li>
 </ul>
 </p>
 
