--- a/Publications.html
+++ b/Publications.html
@@ -60,8 +60,10 @@ Sena Kiciroglu, Helge Rhodin, Sudipta N. Sinha, Mathieu Salzmann and Pascal Fua<
 <span class="paperheading">Towards Privacy-Preserving Ego-Motion Estimation using an Extremely Low-Resolution Camera</span>
 <span class="authors">Armon Shariati, Christian Holz and Sudipta N. Sinha</span>
 <span class="booktitle">IEEE Robotics and Automation Letters (RA-L), January 2020</span>
-[<a href="pdfs/ShariatiHolzSinhaRAL2020.pdf">pdf</a>]
+[<a href="pdfs/TekinCVPR2018.pdf">pdf</a>]&nbsp[<a href="https://github.com/ashariati/srfnet">code</a>]
 </p>
+
+
 
 <!-------------------------------------------------------------->
 <h3>2019</h3>
