added arxiv draft link.

--- a/Publications.html
+++ b/Publications.html
@@ -48,6 +48,13 @@
 <!-------------------------------------------------------------->
 <h3>2020</h3>
 
+<p>
+<span class="paperheading">Privacy-Preserving Visual Feature Descriptors through Adversarial Affine Subspace Embedding</span>
+<span class="authors">Mihai Dusmanu, Johannes L. Schönberger, Sudipta N. Sinha, Marc Pollefeys</span>
+<span class="booktitle">arXiv draft (paper under review)</span>
+[<a href="https://arxiv.org/abs/2006.06634">link</a>]
+</p>
+
 <p> 
 <span class="paperheading">ActiveMoCap: Optimized Viewpoint Selection for Active Human Motion Capture</span>
 <span class="authors">
