--- a/Publications.html
+++ b/Publications.html
@@ -643,6 +643,18 @@ Computational Vision in Neural and Machine Systems, L. Harris and M. Jenkins (Ed
 <h2 id = "patents">Patents</h2>
 
 <p class="paperheading">
+Camera Pose Estimation using Obfuscated Features
+[<a href="https://patents.justia.com/patent/20200126256">20200126256</a>] </p>
+Sudipta N. Sinha, Marc Pollefeys, Sing Bing Kang, Pablo Speciale<br>
+Publication, April 23, 2020<br> <p></p>
+
+<p class="paperheading">
+Device Pose Estimation using 3D Line Clouds
+[<a href="https://patents.justia.com/patent/20200005486">20200005486</a>] </p>
+Sudipta N. Sinha, Pablo Speciale, Sing Bing Kang, Marc Pollefeys<br>
+Publication, January 2, 2020<br> <p></p>
+
+<p class="paperheading">
 Optimal Scanning Trajectories for 3D Scenes 
 [<a href="https://patents.justia.com/patent/20180367728">20180367728</a>] </p>
 Mike Roberts, Debadeepta Dey, Sudipta N. Sinha, Shital Shah, Ashish Kapoor, Neel Joshi<br>
