--- a/Activities.html
+++ b/Activities.html
@@ -32,10 +32,11 @@
 
 <p class="paperheading">Organizing, Service
 <ul>
+<li>Senior Program Committee memmber, IJCAI 2021</li>
 <li>Area Chair, International Conference on 3D Vision (3DV) 2020</li>
 <li>Senior Program Committee member, IJCAI-PRICAI 2020</li>
 <li>Area Chair, International Conference on 3D Vision (3DV) 2019</li>
-<li>Associate Area Editor, Computer Vision and Image Understanding (CVIU) Journal</li>
+<li>Area Editor, Computer Vision and Image Understanding (CVIU) Journal</li>
 <li>Area Chair, International Conference on 3D Vision (3DV) 2018</li>
 <li>Program Chair, International Conference on 3D Vision (3DV) 2017</li>
 <li>Area Chair, International Conference on Computer Vision (ICCV) 2017</li>
