updating WSU talk slides.

--- a/Others.html
+++ b/Others.html
@@ -107,8 +107,9 @@
 
 <ul>
 
-<li>
-Project FarmBeats: Aerial Mapping for Agricultural Farms and Beyond, <br>Invited talk, 
+<li>Towards Privacy-Preserving Spatial AI, <br>Invited talk, Advancing AI @ WSU summit, October 2020 [<a href="https://snsinha.github.io/talks/10142020_AdvancingAI_WSU_talk_slides.pdf">pdf</a>].</li><br>
+
+<li>Project FarmBeats: Aerial Mapping for Agricultural Farms and Beyond, <br>Invited talk, 
 The 1st International Workshop on Agriculture-Vision<br>
 IEEE/CVF CVPR 2020 Workshop, [<a href="https://www.youtube.com/watch?v=_7XGX2YDR5Q">video</a>].</li><br>
 
