added a link to the workshop webpage.

--- a/Others.html
+++ b/Others.html
@@ -107,7 +107,7 @@
 
 <ul>
 
-<li>Towards Privacy-Preserving Spatial AI, <br>Invited talk, Advancing AI @ WSU summit, October 2020 [<a href="https://snsinha.github.io/talks/10142020_AdvancingAI_WSU_talk_slides.pdf">pdf</a>].</li><br>
+<li>Towards Privacy-Preserving Spatial AI, <br>Invited talk, <a href="https://researchweek.wsu.edu/advancing-ai/">Advancing AI @ WSU summit</a>, October 2020 [<a href="https://snsinha.github.io/talks/10142020_AdvancingAI_WSU_talk_slides.pdf">pdf</a>].</li><br>
 
 <li>Project FarmBeats: Aerial Mapping for Agricultural Farms and Beyond, <br>Invited talk, 
 The 1st International Workshop on Agriculture-Vision<br>
