uploading 3DV camera ready paper to website.

--- a/Publications.html
+++ b/Publications.html
@@ -49,6 +49,13 @@
 <h3>2020</h3>
 
 <p>
+<span class="paperheading">Generalized Pose-and-Scale Estimation using 4-Point Congruence Constraints</span>
+<span class="authors">Victor Fragoso and Sudipta N. Sinha</span>
+<span class="booktitle">3DV 2020</span>
+[<a href="pdfs/FragosoSinha_3DV2020.pdf">pdf</a>]&nbsp[<a href="pdfs/FragosoSinha_3DV2020.pdf">supplementary pdf</a>]
+</p>
+
+<p>
 <span class="paperheading">Privacy-Preserving Visual Feature Descriptors through Adversarial Affine Subspace Embedding</span>
 <span class="authors">Mihai Dusmanu, Johannes L. Schönberger, Sudipta N. Sinha, Marc Pollefeys</span>
 <span class="booktitle">arXiv draft (paper under review)</span>
