added 3DV 2020 paper to pubs list.

--- a/Publications.html
+++ b/Publications.html
@@ -56,6 +56,13 @@
 </p>
 
 <p>
+<span class="paperheading">Depth Completion using a View-constrained Deep Prior</span>
+<span class="authors">Pallabi Ghosh, Vibhav Vineet, Larry S. Davis, Abhinav Shrivastava, Sudipta Sinha and Neel Joshi</span>
+<span class="booktitle">3DV 2020</span>
+[<a href="https://arxiv.org/abs/2001.07791">pdf</a>]
+</p>
+
+<p>
 <span class="paperheading">Privacy-Preserving Visual Feature Descriptors through Adversarial Affine Subspace Embedding</span>
 <span class="authors">Mihai Dusmanu, Johannes L. Schönberger, Sudipta N. Sinha, Marc Pollefeys</span>
 <span class="booktitle">arXiv draft (paper under review)</span>
