--- a/Publications.html
+++ b/Publications.html
@@ -57,7 +57,7 @@
 
 <p>
 <span class="paperheading">Depth Completion using a View-constrained Deep Prior</span>
-<span class="authors">Pallabi Ghosh, Vibhav Vineet, Larry S. Davis, Abhinav Shrivastava, Sudipta Sinha and Neel Joshi</span>
+<span class="authors">Pallabi Ghosh, Vibhav Vineet, Larry S. Davis, Abhinav Shrivastava, Sudipta N. Sinha and Neel Joshi</span>
 <span class="booktitle">3DV 2020</span>
 [<a href="https://arxiv.org/abs/2001.07791">pdf</a>]
 </p>
